--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,23 @@
-spring.datasource.url=jdbc:h2:file:~/data/empresa
+#spring.datasource.url=jdbc:h2:file:~/data/empresa
+spring.datasource.url=jdbc:h2:mem:empresa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.show-sql=true
+spring.jackson.default-property-inclusion=non-null
+
+#Turn Statistics on
+#spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+# Show all queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.type=trace
+# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
+
 
