--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jackson.deserialization.fail-on-unknown-properties=false
+spring.jackson.serialization.fail-on-empty-beans=false
 
 
